--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>To-Do List</title>
 </head>
 <body>
-    <div class="container">
-        <h1>To-Do List</h1>
-        <div class="input-group">
-            <input type="text" id="todo-input" placeholder="Enter a task">
-            <button id="add-btn">Add</button>
-        </div>
-        <ul id="todo-list"></ul>
+  <div class="container">
+    <h1>To-Do List</h1>
+    <div class="input-group">
+      <input type="text" id="todo-input" placeholder="Enter a task">
+      <button id="add-btn">Add</button>
     </div>
-    <script src="script.js" defer></script>
+    <ul id="todo-list"></ul>
+  </div>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
