--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>To-Do List</title>
-</head>
-<body>
-  <div class="container">
-    <h1>To-Do List</h1>
-    <div class="input-group">
-      <input type="text" id="todo-input" placeholder="Enter a task">
-      <button id="add-btn">Add</button>
-    </div>
-    <ul id="todo-list"></ul>
-  </div>
-  <script type="module" src="/src/main.ts"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + Vue + TS</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
